Fix CSS Grid scroll bug on Safari
Use a wrapper around waypoint-editor to prevent Safari from losing
scroll position when a waypoint item is (de)selected.

--- a/src/main.scss
+++ b/src/main.scss
@@ -34,8 +34,13 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     outline: none;
 }
 
-#waypoint-editor {
+#waypoint-editor-wrapper {
     grid-area: editor;
+}
+
+#waypoint-editor {
+    width: 100%;
+    height: 100%;
 
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 
